# Reminder-by-email

./: .gitignore  README.md  app.py  email_sender.py  keys_template.py  pyproject.toml
templates/: confirmation_email.html  index.html  reminder.html
