[tool.poetry]
name = "login-reminder"
version = "0.1.0"
description = ""
authors = ["MrTangle <alexibanez86@gmail.com>"]
readme = "README.md"
packages = [{include = "login_reminder"}]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^23.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

